prep for deployment

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
       <img src="/static/img/splash.jpg">
       <div class="text-overlay">
         <!-- Feel free to change this -->
-        <h1>Welcome to my Site!</h1>
+        <h1>Nathan Wang</h1>
       </div>
     </div>
   </div>
@@ -18,10 +18,10 @@
     <div class="container" style="max-width: 800px;">
       <div class="row align-items-center" style="min-height: 40px;">
         <div class="col-sm-4 text-pad">
-          Your Name
+          Nathan Wang
         </div>
         <div class="col-sm-4 text-pad">
-          me@gmail.com
+          nathanbchenwang@gmail.com
         </div>
         <div class="col-sm-4 text-pad">
           Los Angeles, CA
@@ -34,9 +34,9 @@
 <div class="container page-content-container" style="margin-top: 40px;">
   <div class="row">
     <div class="col blurb-section">
-      <p>This is a blurb of my site.</p>
-      <p>Describe a short bit about yourself and why you made this site.</p>
-      <p>Encourage people to check out the chat app feature!</p>
+      <p>Hello my name is Nathan Wang</p>
+      <p>I am a highschool junior that made this website to illustrate my knowledge on web design</p>
+      <p>There is a built in Chat feature</p>
     </div>
   </div>
   <div class="row">
@@ -50,7 +50,7 @@
       <div class="container section-content">
         <div class="row">
           <div class="col section-content-header">
-            Project 1
+            Python Programs
           </div>
         </div>
         <div class="row">
@@ -60,12 +60,12 @@
         </div>
         <div class="row">
           <div class="col section-content-inner">
-            <p>Here is what I did for this project</p>
+            <p>I am currently attemptly to learn to program in the Python language</p>
             <p>Here are some action steps I took</p>
             <ul>
-              <li class="main-li">I planned this out</li>
-              <li class="sub-li">Step 1</li>
-              <li class="sub-li">Step 2</li>
+              <li class="main-li">Abilities</li>
+              <li class="sub-li">Understands the basics of Python and the logistics</li>
+              <li class="sub-li">IDk</li>
               <li class="main-li">I executed this</li>
             </ul>
           </div>
@@ -80,7 +80,7 @@
         </div>
         <div class="row">
           <div class="col time-span">
-            Aug 2019 - Jan 2020
+            Aug 2019 - Current
           </div>
         </div>
         <div class="row">
@@ -156,9 +156,9 @@
                 </div>
                 <div class="flip-card-back">
                   <div>
-                    <h3>Activity 2</h3>
-                    <p>Some stuff about this activity</p>
-                    <a href="https://www.reddit.com">Some resource about it</a>
+                    <h3>Computers and Video Games</h3>
+                    <p>I love to play videogames and just mess around on the computer</p>
+                    <a href="https://www.riotgames.com/en">Here are some of my favorite games</a>
                   </div>
                 </div>
               </div>
@@ -199,11 +199,11 @@
       <div class="col-sm-6 contact-icons">
         <div>
           <img src="/static/img/contact-icons/phoneicon.png">
-          <span class="contact-info">XXX-XXX-XXXX</span>
+          <span class="contact-info">714-395-3400</span>
         </div>
         <div>
           <img src="/static/img/contact-icons/gmail.png">
-          <span class="contact-info">someone@gmail.com</span>
+          <span class="contact-info">nathanbchenwang@gmail.com</span>
         </div>
         <div>
           <a href="https://www.linkedin.com">
@@ -214,19 +214,19 @@
         <div>
           <a href="https://www.instagram.com">
             <img src="/static/img/contact-icons/insta.jpg">
-            <span class="contact-info">@whoiam</span>
+            <span class="contact-info">@nbwang</span>
           </a>
         </div>
         <div>
           <a href="https://www.facebook.com">
             <img src="/static/img/contact-icons/facebook.png">
-            <span class="contact-info">facebook.com/someone</span>
+            <span class="contact-info">facebook.com/nathan.wang</span>
           </a>
         </div>
         <div>
           <a href="https://www.github.com">
             <img src="/static/img/contact-icons/github.png">
-            <span class="contact-info">github.com/somone</span>
+            <span class="contact-info">github.com/Riceko</span>
           </a>
         </div>
       </div>
